[Home]

Summary:ASTERISK-22209: Bridge API Enhancements - Make dial, queue, etc. add their features to the bridge DTMF features datastore instead of override them.
Reporter:Jonathan Rose (jrose)Labels:Asterisk12
Date Opened:2013-07-29 16:53:13Date Closed:2013-08-05 15:29:05
Priority:MinorRegression?No
Status:Closed/CompleteComponents:
Versions:Frequency of
Occurrence
Related
Issues:
Environment:Attachments:
Description:Currently if DTMF features are set in a channel's datastore, calling one of these apps will clean out that datastore and replace the features available with only the ones set by this application (including no features if no features options are provided). Ideally these options should be additive with already set features on a given channel according to Richard.

features.c:pre_bridge_setup is a good place to start looking at this. It's currently a little tricky to test this, but it should be trivial once https://reviewboard.asterisk.org/r/2648/ goes in. From that point it will simply require something like the following:

exten => 1,1,Set(CHANNEL(dtmf_features)=K)
exten => 1,n,Dial(SIP/whatever,,TX)

Once the call is bridged check if parking and transfers are both available and if they are, it's successful.
Comments: